# rusoto-rustls-batch-repro

./: Cargo.toml  README.md
src/: main.rs
